--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,11 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-#theme: minimal
+theme: minimal
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
-remote_theme: pages-themes/cayman@v0.2.0
+#remote_theme: pages-themes/cayman@v0.2.0
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
